# alice-rsn-analysis

./: .clang-format  .gitignore  CMakeLists.txt  README.md
RsnOut/: AliRsnOutTask.cxx  AliRsnOutTask.h  AliRsnOutTaskBin.cxx  AliRsnOutTaskBin.h  AliRsnOutTaskBinMgr.cxx  AliRsnOutTaskBinMgr.h  AliRsnOutTaskFit.cxx  AliRsnOutTaskFit.h  AliRsnOutTaskInput.cxx  AliRsnOutTaskInput.h  AliRsnOutTaskMgr.cxx  AliRsnOutTaskMgr.h  AliRsnOutTaskNorm.cxx  AliRsnOutTaskNorm.h  AliRsnOutTaskResult.cxx  AliRsnOutTaskResult.h  AliRsnOutTaskRooFit.cxx  AliRsnOutTaskRooFit.h  AliRsnOutValue.cxx  AliRsnOutValue.h  CMakeLists.txt  RsnOutLinkDef.h
RsnOut/PROOF-INF/: BUILD.sh  SETUP.C
cmake/: cmake_uninstall.cmake.in
cmake/modules/: FindJSONCPP.cmake  FindROOT.cmake  Root6Macros.cmake  RootMacros.cmake  root-utils.cmake
cmake/par/: CMakeLists.txt.in
cmake/tmpl/: AliRsnOutTaskBin.cxx  AliRsnOutTaskBin.h  AliRsnOutTaskExample.cxx  AliRsnOutTaskExample.h  tmpl.sh
macros/analysis/: CreateRsnOutTasks.C  CreateRsnOutTasksNew.C  ExportTasks.C  RsnOutTasks.C  RsnRename.C  RsnShow.C  RunRsnOut.C  RunRsnOutMgrs.C  libRsnOut.rootmap  macro.C  rootlogon.C
macros/analysis/config/: LHC15f_LHC15g3a3.json  convert2ndmvr.C
macros/train/: AddRsnTaskTestCosTheta.C  AddTaskPhiPP13TeV_PID.C  AddTaskRsnPhiSpinPol.C  AnalysisConfig.C  Run.C  input.txt
macros/train/QnCorrectionData/LHC10h/: runoptions.txt
macros/train/QnCorrectionData/LHC10h_AOD/: GRIDrealdata.txt  runoptions.txt
macros/train/QnCorrectionData/LHC2010h/: runoptions.txt
macros/train/runs/PbPb/: 01_PhysSel.wag  02_Centrality.wag  03_QnVectorCorrectionsLoad.wag  04_QnVectorCorrections.wag  05_PIDResponse.wag  10_RsnTest.wag  input.txt  input_PbPb_LHC10h.txt  input_PbPb_LHC10h_9.txt  input_pp_LHC15g3c3.txt  runAnalysis.H  runoptions.txt
macros/train/runs/pp/: AnalysisConfig.C  Run.C  input.txt  input_pp_LHC15f.txt
macros/train/wagons/: Centrality.wag  PIDResponse.wag  PhysSel.wag  PhysSel_mc.wag  QnVectorCorrections.wag  QnVectorCorrectionsLego.wag  QnVectorCorrectionsLoad.wag  Rsn.wag  RsnCosThetaTest.wag  RsnEventPlaneTest.wag  RsnTest.wag  RsnTestCosTheta.wag  Rsn_PbPb_data_tcp3s.wag  Rsn_PbPb_data_tcp3s_local.wag  Rsn_PbPb_test.wag  Rsn_pp_data_tcp3s.wag  Rsn_pp_data_tcp3s_local.wag  Rsn_pp_data_tcp3s_pol.wag  Rsn_pp_mc_tcp3s.wag  Rsn_pp_mc_tcp3s_pol.wag  Rsn_pp_mc_tcp3s_pol_local.wag
notes/Phi_pol_PbPb_LHC10h/: ALICE_analysis_note.tex  ALICE_analysis_notes.cls
scripts/: alice_cp.sh  clean.sh  env.sh  format.sh  make.sh  rename.sh
src/: CMakeLists.txt  rsn-config-example.json  rsn-out-run.cxx
tasks/: AddRsnTaskCosThetaTest.C  AddRsnTaskEventPlaneTest.C  AddRsnTaskTest.C  AddRsnTaskTestCosTheta.C  AliRsnTaskCosThetaTest.cxx  AliRsnTaskCosThetaTest.h  AliRsnTaskEventPlaneTest.cxx  AliRsnTaskEventPlaneTest.h  AliRsnTaskTest.cxx  AliRsnTaskTest.h  AliRsnTaskTestCosTheta.cxx  AliRsnTaskTestCosTheta.h
